# SOC_laboratory

./: README.md  pyproject.toml  requirements.txt  run.py  srs-doc.md
soc_ingestor/: __init__.py  app.py  config.py
soc_ingestor/clients/: __init__.py  elastic.py  kibana.py
soc_ingestor/generators/: __init__.py  auth.py  dns.py  endpoint.py  firewall.py  helpers.py  network.py  pools.py
soc_ingestor/rules/: __init__.py  builder.py  mitre.py
soc_ingestor/ui/: __init__.py  ingestion.py  rules_panel.py  styles.py  wizard.py
